--- a/index.html
+++ b/index.html
@@ -31,31 +31,31 @@
              </div>
              <ul class="header-menu">
                 <li>
-                    <a href="#">
+                    <a href="#home">
                         <i class="fa-solid fa-house"></i>
                         <span>HOME</span>
                     </a>
                 </li>
                 <li>
-                    <a href="#">
+                    <a href="#profile">
                         <i class="fa-solid fa-circle-user"></i>
                         <span>PROFILE</span>
                     </a>
                 </li>
                 <li>
-                    <a href="#">
+                    <a href="#portfolio">
                         <i class="fa-solid fa-desktop"></i>
                         <span>WORK</span>
                     </a>
                 </li>
                 <li>
-                    <a href="#">
+                    <a href="#skill">
                         <i class="fa-solid fa-gear"></i>
                         <span>SKILL</span>
                     </a>
                 </li>
                 <li>
-                    <a href="#">
+                    <a href="#contact">
                         <i class="fa-solid fa-phone"></i>
                         <span>CONTACT</span>
                     </a>
@@ -69,31 +69,31 @@
             <div class="side-menu">
                 <ul>
                     <li>
-                        <a href="#">
+                        <a href="#home">
                             <i class="fa-solid fa-house"></i>
                             <span>HOME</span>
                         </a>
                     </li>
                     <li>
-                        <a href="#">
+                        <a href="#profile">
                             <i class="fa-solid fa-circle-user"></i>
                             <span>PROFILE</span>
                         </a>
                     </li>
                     <li>
-                        <a href="#">
+                        <a href="#portfolio">
                             <i class="fa-solid fa-desktop"></i>
                             <span>WORK</span>
                         </a>
                     </li>
                     <li>
-                        <a href="#">
+                        <a href="#skill">
                             <i class="fa-solid fa-gear"></i>
                             <span>SKILL</span>
                         </a>
                     </li>
                     <li>
-                        <a href="#">
+                        <a href="#contact">
                             <i class="fa-solid fa-phone"></i>
                             <span>CONTACT</span>
                         </a>
@@ -103,12 +103,12 @@
         </div>
         
     </header>
-    <section class="home">
+    <section class="home" id="home">
         <div class="inner">
             <h1 class="home-text"></h1>
         </div>
     </section>
-    <section class="profile" data-aos="fade-up"
+    <section class="profile" id="profile" data-aos="fade-up"
     data-aos-delay="500">
         <div class="inner">
             <div class="title">
@@ -184,7 +184,7 @@
             </div> 
         </div>
     </section>
-    <section class="portfolio">
+    <section class="portfolio" id="portfolio">
         <div class="inner">
             <div class="title">
                 <h2>PORTFOLIO</h2>
@@ -221,7 +221,7 @@
             </div>
         </div>
     </section>
-    <section class="skill">
+    <section class="skill" id="skill">
         <div class="inner">
             <div class="title">
                 <h2>SKILL & TOOL</h2>
@@ -340,7 +340,7 @@
             </div>
         </div>
     </section>
-    <section class="contact">
+    <section class="contact" id="contact">
         <div class="inner">
             <div class="title">
                 <h2>CONTACT</h2>
